fix python yara module issue on Ubuntu xenial+bionic

--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -45,9 +45,9 @@
     state: link
   when: ansible_os_family == "RedHat" and ansible_distribution_version.split('.')[0] == '7'
 
-- name: Bionic | libyara.so symlink for python yara module
+- name: Ubuntu | libyara.so symlink for python yara module
   file:
-    src: /usr/local/lib/python3.6/dist-packages/usr/lib/libyara.so
+    src: "{{ mispmodules_libyarapath }}/libyara.so"
     dest: /usr/lib/libyara.so
     state: link
-  when: ansible_os_family == "Ubuntu" and ansible_distribution_version.split('.')[0] == '18'
+  when: ansible_os_family == "Ubuntu"
