--- a/vars/Ubuntu-16.04.yml
+++ b/vars/Ubuntu-16.04.yml
@@ -81,3 +81,5 @@ nginx_sock: /run/php/php7.0-fpm.sock
 fpm_user: www-data
 
 gnupg_privdir: "{{ misp_rootdir }}/.gnupg"
+
+mispmodules_libyarapath: /usr/local/lib/python3.5/dist-packages/usr/lib
