--- a/vars/Ubuntu-18.04.yml
+++ b/vars/Ubuntu-18.04.yml
@@ -81,3 +81,5 @@ nginx_sock: /run/php/php7.2-fpm.sock
 fpm_user: www-data
 
 gnupg_privdir: "{{ misp_rootdir }}/.gnupg/private-keys-v1.d"
+
+mispmodules_libyarapath: /usr/local/lib/python3.6/dist-packages/usr/lib
