fix python yara module issue on Ubuntu xenial+bionic - fix condition

--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -50,4 +50,4 @@
     src: "{{ mispmodules_libyarapath }}/libyara.so"
     dest: /usr/lib/libyara.so
     state: link
-  when: ansible_os_family == "Ubuntu"
+  when: ansible_distribution == 'Ubuntu'
