--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -56,6 +56,8 @@ misp_pkg_list:
     - ssdeep-devel
     - ssdeep-libs
 
+easy_install_bin: easy_install-3.6
+
 misp_webserver_apache2:
     - httpd
 
