--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -11,13 +11,17 @@
 - name: debian | install dependencies for MISP modules (pip3)
   pip: requirements={{ mispmodules_rootdir }}/misp-modules/REQUIREMENTS executable=pip3
   when: ansible_os_family == 'Debian'
-## centos7: pip points to python34
-- name: redhat | install dependencies for MISP modules (pip3)
+## centos7: pip points to python3x
+- name: redhat | install dependencies for MISP modules (pip)
   pip: requirements={{ mispmodules_rootdir }}/misp-modules/REQUIREMENTS executable=pip
   when: ansible_os_family == 'RedHat'
+  environment:
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 - name: install MISP modules (pip3)
   pip: name=file://{{ mispmodules_rootdir }}/misp-modules executable=pip3
+  environment:
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 - name: add MISP modules script for boot
   lineinfile:
