--- a/tasks/misp-add-user.yml
+++ b/tasks/misp-add-user.yml
@@ -2,7 +2,7 @@
 
 #- debug: var=list
 - name: add user {{ user.email }}
-  command: "python3 ./add_user.py -e {{ user.email }} -o {{ user.org }} -r {{ user.role }} chdir={{ misp_rootdir }}/PyMISP/examples"
+  command: "{{ python3_bin }} ./add_user.py -e {{ user.email }} -o {{ user.org }} -r {{ user.role }} chdir={{ misp_rootdir }}/PyMISP/examples"
   when: list.stdout.find(user.email) == -1 and user.email is defined
   register: out
 #- debug: var=out
