--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -57,6 +57,7 @@ misp_pkg_list:
     - ssdeep-libs
 
 easy_install_bin: easy_install-3.6
+python3_bin: python36
 
 misp_webserver_apache2:
     - httpd
