--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -79,7 +79,8 @@ misp_git_signing_keys:
 misp_pymisp_verifycert: False
 misp_no_log: true
 
-misp_redis_password: redis_password_to_change
+# FIXME! https://github.com/MISP/MISP/issues/3452
+#misp_redis_password: redis_password_to_change
 misp_redis_securecommands:
     - { re: '^rename-command FLUSHDB .*', l: 'rename-command FLUSHDB ""' }
     - { re: '^rename-command FLUSHALL .*', l: 'rename-command FLUSHALL ""' }
