--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -58,6 +58,7 @@ misp_pkg_list:
 
 easy_install_bin: easy_install-3.6
 python3_bin: python36
+python3_pip: /usr/local/bin/pip3
 
 misp_webserver_apache2:
     - httpd
