ansible packages install without loop, formatting

--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -3,10 +3,11 @@
 # deb http://http.debian.net/debian wheezy-backports main
 
 - name: apt | MISP dependencies install
-  apt: name={{item}} state=present update_cache=yes cache_valid_time=3600
-  with_items:
-    - "{{ misp_pkg_list }}"
-    - "{{ webserver }}"
+  apt:
+    name: "{{ misp_pkg_list + webserver }}"
+    state: present
+    update_cache: yes
+    cache_valid_time: 3600
   async: 3600
   poll: 300
 
