--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -7,10 +7,10 @@
 - include: redhat-remi.yml
 
 - name: yum | MISP dependencies install
-  yum: name={{item}} state=present update_cache=yes
-  with_items:
-    - "{{ misp_pkg_list }}"
-    - "{{ webserver }}"
+  yum:
+    name: "{{ misp_pkg_list + webserver }}"
+    state: present
+    update_cache: yes
   async: 3600
   poll: 300
 
@@ -40,7 +40,9 @@
 
 ## http://stackoverflow.com/questions/32618686/how-to-install-pip-in-centos-7
 - name: redhat | install missing pip3 command
-  command: "{{ easy_install_bin }} pip creates=/usr/bin/pip3"
+  command: "{{ easy_install_bin }} pip"
+  args:
+    creates: /usr/local/bin/pip3
   environment:
     PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
