--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -387,7 +387,7 @@
 - include: misp-modules.yml
 
 - include: lief.yml
-  when: misp_lief_enable
+  when: misp_lief_enable and (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version|int >= 18)
 
 - include: testing.yml
   when: misp_testing is defined and misp_testing
