--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -40,3 +40,9 @@ suites:
   - name: default
     run_list:
     attributes:
+  - name: nginx
+    run_list:
+    attributes:
+    includes:
+      - ubuntu-18.04
+      - centos-7
