--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -414,7 +414,7 @@
 
 # snuffleupagus sp.readonly_exec.enable() = php file must be non-writeable (issue with auto-update?)
 - name: Ensure that webroot files are executable but not writeable
-  command: "find {{ misp_rootdir }}/app/ -iname '{{ item }}' -exec chmod 555 {} \;"
+  command: "find {{ misp_rootdir }}/app/ -iname '{{ item }}' -exec chmod 555 {} \\;"
   with_items:
     - '*.php'
     - '*.ctp'
