--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -288,7 +288,7 @@
 - name: set Cache::Config - mask acceptable for snuffleupagus
   lineinfile:
     dest: "{{ misp_rootdir }}/app/Config/bootstrap.php"
-    regexp: "^Cache::config('default', .*"
+    regexp: "^Cache::config('default', .*);"
     line: "Cache::config('default', array( 'engine' => 'File', 'mask' => 0600 ));"
 - name: add vendor/autoload.php to core
   lineinfile: 'dest={{ misp_rootdir }}/app/Config/core.php line="{{ item }}"'
@@ -413,8 +413,8 @@
     create: yes
 
 # snuffleupagus sp.readonly_exec.enable() = php file must be non-writeable (issue with auto-update?)
-- name: Ensure that webroot files are executable but not writeable
-  command: "find {{ misp_rootdir }}/app/ -iname '{{ item }}' -exec chmod 555 {} \\;"
+- name: Ensure that webroot files are not executable and not writeable
+  command: "find {{ misp_rootdir }}/app/ -type f -iname '{{ item }}' -exec chmod 0444 {} \\;"
   with_items:
     - '*.php'
     - '*.ctp'
