--- a/tasks/testing.yml
+++ b/tasks/testing.yml
@@ -44,8 +44,8 @@
   with_items:
     - "{{ misp_rootdir }}/build"
     - "{{ misp_rootdir }}/tests"
-- name: use MISP travis bootstrap
-  copy: "src={{ misp_rootdir }}/travis/bootstrap.php dest={{ misp_rootdir }}/app/Config/bootstrap.php backup=yes force=yes"
+#- name: use MISP travis bootstrap
+#  copy: "src={{ misp_rootdir }}/travis/bootstrap.php dest={{ misp_rootdir }}/app/Config/bootstrap.php backup=yes force=yes"
 
 - include: misp-key-file.yml
 
@@ -54,8 +54,8 @@
 #  file: "dest={{ misp_rootdir }} owner={{ www_user }} mode=755 recurse=yes"
   file: "dest={{ misp_rootdir }} owner={{ www_user }} mode=755"
   become: yes
-- name: MISP tree permissions
-  file: "dest={{ item }} owner={{ www_user }} mode=755 recurse=yes"
+#- name: MISP tree permissions
+#  file: "dest={{ item }} owner={{ www_user }} mode=755 recurse=yes"
 ## Note: recurse is only valid if directory and can't select them from fileglob
 #  with_fileglob:
 #    - "{{ misp_rootdir }}/*"
