--- a/.kitchen.vagrant.yml
+++ b/.kitchen.vagrant.yml
@@ -13,7 +13,7 @@ driver_config:
 
 provisioner:
   name: ansible_playbook
-  roles_path: ../../roles
+  roles_path: ../
   hosts: test-kitchen
 #  ansible_verbose: true
   ansible_verbose: false
