--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,9 @@ before_install:
 #  - cat /etc/default/lxd-bridge
 #  - service --status-all
   - sudo service lxd restart
+# https://redis4you.com/articles.php?id=012&name=redis
+  - sudo sysctl -w net.ipv4.tcp_timestamps=1
+  - sudo sysctl -w net.ipv4.tcp_tw_recycle=1
 
   - sudo pip install ansible
   - gem install kitchen
