--- a/tasks/misp-feeds.yml
+++ b/tasks/misp-feeds.yml
@@ -5,13 +5,13 @@
 
 ## FIXME! not idempotent, no way to list feeds with their status
 - name: enable feeds
-  command: "curl -X POST -H 'Authorization: {{ userkey }}' -H 'Content-Type: application/json' -H 'Accept: application/json' {{ misp_base_url }}/feeds/enable/{{ item }}"
+  command: "curl -k -X POST -H 'Authorization: {{ userkey }}' -H 'Content-Type: application/json' -H 'Accept: application/json' {{ misp_base_url }}/feeds/enable/{{ item }}"
   with_items: "{{ misp_enable_feeds }}"
   register: enableresults
 #- debug: var=enableresults
 
 - name: disable feeds
-  command: "curl -X POST -H 'Authorization: {{ userkey }}' -H 'Content-Type: application/json' -H 'Accept: application/json' {{ misp_base_url }}/feeds/disable/{{ item }}"
+  command: "curl -k -X POST -H 'Authorization: {{ userkey }}' -H 'Content-Type: application/json' -H 'Accept: application/json' {{ misp_base_url }}/feeds/disable/{{ item }}"
   with_items: "{{ misp_disable_feeds }}"
   register: disableresults
 #- debug: var=disableresults
