--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -49,9 +49,13 @@
     state: link
   when: ansible_os_family == "RedHat" and ansible_distribution_version.split('.')[0] == '7'
 
+- name: Ubuntu | check libyara.so location
+  stat:
+    path: /usr/lib/libyara.so
+  register: libyaraso
 - name: Ubuntu | libyara.so symlink for python yara module
   file:
     src: "{{ mispmodules_libyarapath }}/libyara.so"
     dest: /usr/lib/libyara.so
     state: link
-  when: ansible_distribution == 'Ubuntu'
+  when: ansible_distribution == 'Ubuntu' and not libyaraso.stat.exists
