Revert "review Cache::config mask - use octdec"
This reverts commit c248cd2030a754745a4b310f567e980e45eff258.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -310,8 +310,7 @@
     dest: "{{ misp_rootdir }}/app/Config/bootstrap.php"
 #             Cache::config('default', array('engine' => 'File'));
     regexp: "^Cache::config.'default', array.'engine' => 'File'.*.;"
-    line: "Cache::config('default', array( 'engine' => 'File', 'mask' => octdec('0600') ));"
-    backup: yes
+    line: "Cache::config('default', array( 'engine' => 'File', 'mask' => 0600 ));"
 - name: add vendor/autoload.php to core
   lineinfile: 'dest={{ misp_rootdir }}/app/Config/core.php line="{{ item }}"'
   with_items:
