--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -315,8 +315,8 @@
 - name: set Cache::Config whole cakephp - mask acceptable for snuffleupagus
   lineinfile:
     dest: "{{ misp_rootdir }}/app/Lib/cakephp/lib/Cake/Cache/Engine/FileEngine.php"
-    regexp: "^          'mask' => .*"
-    line: "          'mask' => 0600"
+    regexp: "^\t\t\t'mask' => .*"
+    line: "\t\t\t'mask' => 0600"
     backup: yes
 - name: add vendor/autoload.php to core
   lineinfile: 'dest={{ misp_rootdir }}/app/Config/core.php line="{{ item }}"'
