--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -58,4 +58,5 @@
     src: "{{ mispmodules_libyarapath }}/libyara.so"
     dest: /usr/lib/libyara.so
     state: link
+  ignore_errors: true
   when: ansible_distribution == 'Ubuntu' and not libyaraso.stat.exists
